updated like last 10 msg saved